<resources>
    <string name="app_name">CovidTracker</string>
    <string name="covid_19_tracker">Covid-19 Tracker</string>
    <string name="statistics">Statistics</string>
    <string name="global">Global</string>
    <string name="india">India</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_updated_4_hours_ago">Last Updated 4 hours ago.</string>
    <string name="_2937">2937</string>
    <string name="confirmed">CONFIRMED</string>
    <string name="_7_502_590">7,502,590</string>
    <string name="active">ACTIVE</string>
    <string name="recovered">RECOVERED</string>
    <string name="deceased">DECEASED</string>
    <string name="countries_affected_by_covid_19">Countries Affected By COVID-19</string>
    <string name="global_top_5">Global Top 5</string>
    <string name="country">Country</string>
    <string name="a">A</string>
    <string name="r">R</string>
    <string name="d">D</string>
    <string name="view_all">View All</string>
    <string name="countries_data_all">Countries Data (All)</string>
    <string name="_23">23</string>
    <string name="_2394">2394</string>
</resources>
