<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GlobalFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_app_bg"
                android:scaleType="centerCrop"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/back_btn"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="28dp"
                        android:src="@drawable/ic_baseline_arrow_back_ios_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:fontFamily="@font/open_sans_semibold"
                        android:text="COVID-19 Tracker"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/open_sans_bold"
                    android:paddingStart="28dp"
                    android:paddingLeft="28dp"
                    android:paddingRight="28dp"
                    android:text="States Data (All)"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginLeft="28dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/last_updated_4_hours_ago"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="28dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="28dp"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="4">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:fontFamily="@font/open_sans_bold"
                            android:paddingLeft="16dp"
                            android:paddingTop="24dp"
                            android:paddingRight="16dp"
                            android:paddingBottom="24dp"
                            android:text="State"
                            android:textSize="16sp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="-8dp"
                            android:layout_marginLeft="-8dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="42dp"
                                android:layout_height="42dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/ic_coronavirus_yellow" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="4dp"
                                android:text="@string/confirmed"
                                android:textColor="#F2C200"
                                android:textSize="10sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="-8dp"
                            android:layout_marginLeft="-8dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="42dp"
                                android:layout_height="42dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/ic_patient" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="4dp"
                                android:text="@string/active"
                                android:textColor="#FF8989"
                                android:textSize="10sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="-8dp"
                            android:layout_marginLeft="-8dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="42dp"
                                android:layout_height="42dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/ic_cardiology" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="4dp"
                                android:text="@string/recovered"
                                android:textColor="#54ADFF"
                                android:textSize="10sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="-8dp"
                            android:layout_marginLeft="-8dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="42dp"
                                android:layout_height="42dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/ic_grave" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="4dp"
                                android:text="@string/deceased"
                                android:textColor="#7B7B7B"
                                android:textSize="10sp" />
                        </LinearLayout>


                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recycler_view"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    tools:listitem="@layout/item_view_states_list"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>


            </LinearLayout>
        </RelativeLayout>
    </ScrollView>


</layout>